# FerrousDB

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/core/: bptree.rs  db.rs  error_handling.rs  index.rs  mod.rs  row.rs  table.rs  view.rs  write_ahead_log.rs
src/core/parser/: command.rs  mod.rs  parser_fn.rs  sql_parser.rs
src/gui/: app_controller.rs  builder.rs  main.rs  theme.rs
src/gui/gui_widgets/: mod.rs  snippets.rs  sql.rs
src/gui/gui_widgets/dialogs/: create_table.rs
src/gui/gui_widgets/table/: list_tables.rs  mod.rs  table_view.rs
