[package]
name = "ferrous_db"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
time = { version = "0.3.36", features = ["formatting", "macros", "serde", "parsing"] }
bincode = "1.3"
sqlparser = "0.51.0"
druid = "0.8.3"
im = "15.1.0"
thiserror = "1.0"
chrono= "0.4.0"

[[bin]]
name = "repl"
test = false

[[bin]]
name = "gui"
path = "src/gui/main.rs"